Fix media title order and make action visible.

--- a/asset/css/scripto.css
+++ b/asset/css/scripto.css
@@ -1,3 +1,7 @@
+.scripto div[role="main"]>h1:first-of-type .title {
+    max-width: 50%;
+}
+
 .browse .scripto-media td:first-child, 
 .browse .scripto-media th:first-child {
     width: 36px;
